# hazy-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml
src/: CMakeLists.txt
src/examples/: main.c
src/include/hazy/: decider.h  direction.h  hazy.h  latency.h  packets.h  transport.h
src/lib/: CMakeLists.txt  Tornado.cmake  hazy.c  hazy_decider.c  hazy_direction.c  hazy_latency.c  hazy_packets.c  hazy_transport.c
